[package]
name = "tcp_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool = "0.12.1"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
futures-util = "0.3.31"
itertools = "0.14.0"
metrics-exporter-tcp = "0.11.0"
mio = "1.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tokio-tungstenite = "0.24.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"
